fixed overflow

--- a/src/app/(pages)/layout.module.scss
+++ b/src/app/(pages)/layout.module.scss
@@ -3,5 +3,6 @@
     height: 100vh;
     & > div {
         width: 100%;
+        overflow-x: hidden;
     }
 }
